--- a/docs/ktua4.sty
+++ b/docs/ktua4.sty
@@ -316,7 +316,7 @@
     \begin{flushright}
       \begin{tabular}{ r l }
          {Atliko:} & {\ktuauthor} \\
-         {Priėmė:} & {\ktumaster} \\
+         {Vadovas:} & {\ktumaster} \\
          {Data:} & {\ktudate} \\
       \end{tabular}
     \end{flushright}
