--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -1,14 +1,13 @@
-\newcommand{\ktusubject}{Report nr.1}   
-\newcommand{\ktutitle}{Example title}
-\newcommand{\ktuyear}{2014}
-\newcommand{\ktudate}{\ktuyear-04-24}
+\newcommand{\ktusubject}{Grafų ir tinklų klasterizavimo metodų palyginimas  nustatant klientų  rizikingas veiklas  pagal socialinių tinklų duomenis}
+\newcommand{\ktutitle}{Baigiamasis magistro projektas}
+\newcommand{\ktuyear}{2017}
+\newcommand{\ktudate}{\ktuyear-04-01}
 \newcommand{\ktucity}{Kaunas}
-\newcommand{\ktuinstitution}{Kaunas University of Technology}
-\newcommand{\ktufaculty}{Faculty of Mathematics and Fundamental Sciences}
-\newcommand{\ktucathedral}{Department of Applied Mathematics}
-\newcommand{\ktuauthor}{John Doe}
-\newcommand{\ktumaster}{Jane Roe}
-
+\newcommand{\ktuinstitution}{Kauno technologijos universitetas}
+\newcommand{\ktufaculty}{Matematikos ir gamtos mokslų fakultetas}
+\newcommand{\ktucathedral}{Taikomosios matematikos katedra}
+\newcommand{\ktuauthor}{Andrius Dapševičius}
+\newcommand{\ktumaster}{Doc. dr. Vytautas Janilionis}
 
 
 \documentclass[12pt, a4paper, onecolumn, titlepage, oneside, intlimits]{report}
@@ -25,61 +24,31 @@
 
 \ktuinit{}    
 
-\ktuchapter{First Chapter}
-\begin{equation}\label{eq:pirma}
-x^2=3
-\end{equation} 
+\ktuchapter{Įžanga}
 
-This is first equation \ref{eq:pirma}. Citing King Lear here \cite{lear}
-
-\begin{ktutable}{caption}{Atsitiktinai suvesti duomenys}
-    \begin{tabular}{lcl}
-      Vardas & Metai & Formulę \\
-      Niutonas   & 1687 & $F = m a$ \\
-      Einšteinas & 1905 & $E = m c^2$ \\
-    \end{tabular}
-\end{ktutable}
-
-\begin{ktutable}{caption1}{Atsitiktinai suvesti duomenys}
-    \begin{tabular}{lcl}
-      Vardas & Metai & Formulę \\
-      Niutonas   & 1687 & $F = m a$ \\
-      Einšteinas & 1905 & $E = m c^2$ \\
-    \end{tabular}
-\end{ktutable}
-
-\begin{ktutable}{caption2}{Atsitiktinai suvesti duomenys}
-    \begin{tabular}{lcl}
-      Vardas & Metai & Formulę \\
-      Niutonas   & 1687 & $F = m a$ \\
-      Einšteinas & 1905 & $E = m c^2$ \\
-    \end{tabular}
-\end{ktutable}
 \newpage
 
-\ktusection{First section}
+\ktuchapter{Literatūros apžvalga}
+\newpage
 
+\ktuchapter{Medžiagos ir tyrimų metodai}
+\newpage
 
-\newpage 
+\ktuchapter{Tyrimų rezultatai ir aptarimas}
+\newpage
 
-\ktusection{Second section}
-\begin{equation}
-\sin(x)=1 
-\end{equation}
-\ktusubsection{First subsection}
-\ktusubsection{Second subsection}
-
+\ktuchapter{Išvados}
+\newpage
 
 \begin{ktuliterature}
     \printbibliography{}
 \end{ktuliterature}
 
-\clearpage
+\newpage
 
 \begin{ktuappendices}
 
 \ktusection{Example material}
-A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, R, S, T, U, V, Z.
 
 \end{ktuappendices}
 
