--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -17,7 +17,7 @@
 \usepackage{polyglossia}
 \setdefaultlanguage{lithuanian}
 
-\usepackage[spacecolon=false,bibencoding=UTF8,sortlocale=en_US,backend=biber,sorting=none,labelnumber=true,natbib=true,bibstyle=iso-numeric,firstinits=true,citestyle=iso-authoryear,language=lithuanian]{biblatex}
+\usepackage[spacecolon=false,bibencoding=UTF8,sortlocale=en_US,backend=biber,sorting=none,labelnumber=true,natbib=true,bibstyle=iso-numeric,firstinits=true,citestyle=iso-numeric,language=lithuanian]{biblatex}
 \bibliography{references}
 
 \begin{document}
@@ -28,7 +28,7 @@
 
 \newpage
 
-\ktuchapter{Literatūros apžvalga}
+\input{apzvalga.tex}
 \newpage
 
 \ktuchapter{Medžiagos ir tyrimų metodai}
