--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1,9 +1,40 @@
-@Book{lear,
-author = {Shakespeare, William},
-bookauthor = {Shakespeare, William},
-maintitle = {Collected Works},
-booktitle = {Tragedies},
-title = {King Lear},
-volume = {1},
-pages = {53-159}
+@article{trees,
+author = {Zerina Mašetic and Abdulhamit Subasi and Jasmin Azemovic},
+title = {Malicious Web Sites Detection using C4.5 Decision Tree},
+journal = {Southeast Europe Journal of Soft Computing},
+year = {2016},
+DOI = {http://dx.doi.org/10.21533/sejsc.v5i1.109}
+}
+
+@inproceedings{tangled,
+ author = {Kumar, Deepak and Ma, Zane and Durumeric, Zakir and Mirian, Ariana and Mason, Joshua and Halderman, J. Alex and Bailey, Michael},
+ title = {Security Challenges in an Increasingly Tangled Web},
+ booktitle = {Proceedings of the 26th International Conference on World Wide Web},
+ series = {WWW '17},
+ year = {2017},
+ isbn = {978-1-4503-4913-0},
+ location = {Perth, Australia},
+ pages = {677--684},
+ numpages = {8},
+ url = {https://doi.org/10.1145/3038912.3052686},
+ doi = {10.1145/3038912.3052686},
+ acmid = {3052686},
+ publisher = {International World Wide Web Conferences Steering Committee},
+ address = {Republic and Canton of Geneva, Switzerland},
+ keywords = {https adoption, privacy/tracking, website complexity},
+}
+
+
+@techreport{pagerank,
+          number = {1999-66},
+           month = {November},
+          author = {Lawrence Page and Sergey Brin and Rajeev Motwani and Terry Winograd},
+            note = {Previous number = SIDL-WP-1999-0120},
+           title = {The PageRank Citation Ranking: Bringing Order to the Web.},
+            type = {Technical Report},
+       publisher = {Stanford InfoLab},
+            year = {1999},
+     institution = {Stanford InfoLab},
+             url = {http://ilpubs.stanford.edu:8090/422/},
+        abstract = {The importance of a Web page is an inherently subjective matter, which depends on the readers interests, knowledge and attitudes. But there is still much that can be said objectively about the relative importance of Web pages. This paper describes PageRank, a mathod for rating Web pages objectively and mechanically, effectively measuring the human interest and attention devoted to them. We compare PageRank to an idealized random Web surfer. We show how to efficiently compute PageRank for large numbers of pages. And, we show how to apply PageRank to search and to user navigation.}
 }
