--- a/docs/apzvalga.tex
+++ b/docs/apzvalga.tex
@@ -5,7 +5,7 @@
 Didelė dalis interneto svetainių yra komerciniai projektai. Naudojami įvairūs pajamų šaltiniai.
 Tai gali būti reklamos, vykdomi pardavimai, prenumeravimo principu veikiančios svetainės.
 Šie būdai yra vartotojų matomi ir suprantami. Tačiau egzistuoja ir svetainės kurios pajamas
-generuoja nelegaliais būdais - vagiamos naudotojų tapatybės, banko sąskaitų, kreditinių kortelių
+generuoja naudotojams kenkiančiais metodais. Vagiamos naudotojų tapatybės, banko sąskaitų, kreditinių kortelių
 duomenys, užvaldomi kompiuteriai siekiant pasipelnyti. Tai yra pavojingos svetainės.
 
 Pavojingos svetainės taip gali būti talpinamos ir ne savo noru.
@@ -34,9 +34,10 @@ jos turinys bei rangas interneto grafe priklauso nuo svetainių kurios turi nuor
 Laikant, kad svarbios svetainės turi nuorodas į kitas svarbias svetaines kyla mintis,
 kad tai turi galioti ir pavojingoms svetainėms.
 Šios svetainės siekia pritraukti žmones, dėl to turi būti optimizuotos SEO prasme.
-Dėl to filtruojant svetaines būtina įtraukti ir interneto svetainių grafo suteikiamą informaciją.
 
-Interneto svetainių grafas primena socialinių tinklų grafą.
+žalingos svetainės gali būti analizuojamos pagal jų sąryšių grafą pagal \cite{webcop}
+
+
 
 Interneto svetainių grafas yra biškį didelis.
 
