--- a/docs/references.bib
+++ b/docs/references.bib
@@ -38,3 +38,40 @@ DOI = {http://dx.doi.org/10.21533/sejsc.v5i1.109}
              url = {http://ilpubs.stanford.edu:8090/422/},
         abstract = {The importance of a Web page is an inherently subjective matter, which depends on the readers interests, knowledge and attitudes. But there is still much that can be said objectively about the relative importance of Web pages. This paper describes PageRank, a mathod for rating Web pages objectively and mechanically, effectively measuring the human interest and attention devoted to them. We compare PageRank to an idealized random Web surfer. We show how to efficiently compute PageRank for large numbers of pages. And, we show how to apply PageRank to search and to user navigation.}
 }
+
+@inproceedings{webcop,
+author = {Stokes, Jack W. and Andersen, Reid and Seifert, Christian and Chellapilla, Kumar},
+title = {WebCop: Locating Neighborhoods of Malware on the Web},
+booktitle = {},
+year = {2010},
+month = {April},
+publisher = {USENIX},
+url = {https://www.microsoft.com/en-us/research/publication/webcop-locating-neighborhoods-of-malware-on-the-web/},
+address = {},
+pages = {},
+journal = {},
+volume = {},
+chapter = {},
+isbn = {},
+}
+
+@Inbook{lexical,
+author="Mamun, Mohammad Saiful Islam
+and Rathore, Mohammad Ahmad
+and Lashkari, Arash Habibi
+and Stakhanova, Natalia
+and Ghorbani, Ali A.",
+editor="Chen, Jiageng
+and Piuri, Vincenzo
+and Su, Chunhua
+and Yung, Moti",
+title="Detecting Malicious URLs Using Lexical Analysis",
+bookTitle="Network and System Security: 10th International Conference, NSS 2016, Taipei, Taiwan, September 28-30, 2016, Proceedings",
+year="2016",
+publisher="Springer International Publishing",
+address="Cham",
+pages="467--482",
+isbn="978-3-319-46298-1",
+doi="10.1007/978-3-319-46298-1_30",
+url="http://dx.doi.org/10.1007/978-3-319-46298-1_30"
+}
