--- a/docs/references.bib
+++ b/docs/references.bib
@@ -75,3 +75,22 @@ isbn="978-3-319-46298-1",
 doi="10.1007/978-3-319-46298-1_30",
 url="http://dx.doi.org/10.1007/978-3-319-46298-1_30"
 }
+
+@techreport{Ardi14a,
+  author = {Ardi, Calvin and Heidemann, John},
+  title = {Web-scale Content Reuse Detection (extended)},
+  institution = {USC/Information Sciences Institute},
+  year = {2014},
+  sortdate = {2014-06-01},
+  project = {ant, mega},
+  jsubject = {www},
+  number = {ISI-TR-2014-692},
+  month = jun,
+  location = {johnh: pafile},
+  keywords = {hashing, content reuse, wikipedia, copying},
+  url = {http://www.isi.edu/%7ejohnh/PAPERS/Ardi14a.html},
+  pdfurl = {http://www.isi.edu/%7ejohnh/PAPERS/Ardi14a.pdf},
+  otherurl = {ftp://ftp.isi.edu/isi-pubs/tr-692.pdf},
+  myorganization = {USC/Information Sciences Institute},
+  copyrightholder = {authors}
+}
