--- a/docs/apzvalga.tex
+++ b/docs/apzvalga.tex
@@ -1,12 +1,36 @@
 \ktuchapter{Literatūros apžvalga}
 
-\ktusection{Pavojingos svetainės}
-
 Didelė dalis interneto svetainių yra komerciniai projektai. Naudojami įvairūs pajamų šaltiniai.
 Tai gali būti reklamos, vykdomi pardavimai, prenumeravimo principu veikiančios svetainės.
 Šie būdai yra vartotojų matomi ir suprantami. Tačiau egzistuoja ir svetainės kurios pajamas
 generuoja naudotojams kenkiančiais metodais. Vagiamos naudotojų tapatybės, banko sąskaitų, kreditinių kortelių
 duomenys, užvaldomi kompiuteriai siekiant pasipelnyti. Tai yra pavojingos svetainės.
+
+\ktusection{Pavojingos svetainės}
+
+Grėsmingos svetainės gali būti grupuojamas į kategorijas \cite{gapi}
+\begin{enumerate}[label=\alph*]
+    \item Socialinė inžinerija
+    \item Kenkimo programos
+    \item Nepageidaujama programinė įranga
+    \item Potencialiai žalinga programinė įranga
+\end{enumerate}
+
+\ktusubsection{Socialinė inžinerija}
+
+Socialinė inžinerija yra apibrėžiama kaip nelegalus pasinaudojimas kompiuteriniais resursais pasitelkiant aupgaunamo
+naudotojo kultūra, psichologinėmis gudrybėmis, socialinėmis savybėmis \cite{soceng}. Tokių atakų metu tikimasi rasti
+ne spragą programinėje įrangoje, o pasinaudoti jos naudotojais kurie suteiks prieigą prie kompiuterinių resursų.
+Vienas iš paprastų pavyzdžių yra naudotojo prisijungimo duomenų išviliojimas, vietoje įsilaužimo į sistemą.
+
+\ktusubsection{Kenkimo programos}
+
+\ktusubsection{Nepageidaujama programinė įranga}
+
+\ktusubsection{Potencialiai žalinga programinė įranga}
+
+
+\ktusection{Pavojingų svetainių aptikimas}
 
 Pavojingos svetainės taip gali būti talpinamos ir ne savo noru.
 Naudojantis spragomis programinėje įrangoje galima įterpti žalingą kodą į kitas svetaines,
