--- a/docs/references.bib
+++ b/docs/references.bib
@@ -6,6 +6,12 @@ year = {2016},
 DOI = {http://dx.doi.org/10.21533/sejsc.v5i1.109}
 }
 
+@article{gapi,
+author = {Google},
+title = {Google safe browsing apis},
+url = {https://developers.google.com/safe-browsing}
+}
+
 @inproceedings{tangled,
  author = {Kumar, Deepak and Ma, Zane and Durumeric, Zakir and Mirian, Ariana and Mason, Joshua and Halderman, J. Alex and Bailey, Michael},
  title = {Security Challenges in an Increasingly Tangled Web},
@@ -93,4 +99,18 @@ url="http://dx.doi.org/10.1007/978-3-319-46298-1_30"
   otherurl = {ftp://ftp.isi.edu/isi-pubs/tr-692.pdf},
   myorganization = {USC/Information Sciences Institute},
   copyrightholder = {authors}
+}
+
+@article{soceng,
+title = "An overview of social engineering malware: Trends, tactics, and implications ",
+journal = "Technology in Society ",
+volume = "32",
+number = "3",
+pages = "183 - 196",
+year = "2010",
+note = "",
+issn = "0160-791X",
+doi = "http://doi.org/10.1016/j.techsoc.2010.07.001",
+url = "http://www.sciencedirect.com/science/article/pii/S0160791X10000497",
+author = "Sherly Abraham and InduShobha Chengalur-Smith"
 }
