--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -32,6 +32,9 @@
 \newpage
 
 \ktuchapter{Medžiagos ir tyrimų metodai}
+
+\input{architektura.tex}
+
 \newpage
 
 \ktuchapter{Tyrimų rezultatai ir aptarimas}
