--- a/docs/apzvalga/webcop.tex
+++ b/docs/apzvalga/webcop.tex
@@ -1,4 +1,17 @@
 \ktusection{Straipsnio WebCop: Locating Neighborhoods of Malware on the web analizė}
 
 
-Straipsnis \kc{webcop}
+\ktucomment{
+Problemos aprašas
+Naudojamas metodas
+Naudojama programinė įranga
+Duomenų rinkinio aprašas
+Metodo privalumai
+Metodo trūkumai
+Programinės įrangos privalumai ir trūkumai
+~60 LOC
+}
+
+
+Straipsnyje \kclong{webcop} siūlomas \mq{WebCop} algoritmas skirtas atpažinti žalingus internetinius puslapius ir
+pavojingų tinklapių grupes, kaimynystes. Stengiamasi identifikuoti 
