--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -10,6 +10,7 @@
 \newcommand{\ktumaster}{Doc. dr. Vytautas Janilionis}
 
 
+\newcommand{\kclong}[1]{\citetitle{#1} \citeauthor{#1} \cite{#1}}
 \newcommand{\kc}[1]{\citeauthor{#1} \cite{#1}}
 
 
