--- a/docs/apzvalga/webcop.tex
+++ b/docs/apzvalga/webcop.tex
@@ -1,17 +1,65 @@
 \ktusection{Straipsnio WebCop: Locating Neighborhoods of Malware on the web analizė}
 
+Straipsnyje \kclong{webcop} siūlomas \mq{WebCop} metodas skirtas atpažinti žalingus internetinius puslapius ir
+pavojingų tinklapių grupes, kaimynystes.
 
-\ktucomment{
-Problemos aprašas
-Naudojamas metodas
-Naudojama programinė įranga
-Duomenų rinkinio aprašas
-Metodo privalumai
-Metodo trūkumai
-Programinės įrangos privalumai ir trūkumai
-~60 LOC
-}
+Šiuo straipnsiu siekiama:
+    \begin{itemize}
+        \item pateikti sistemą gebančią atpažinti pavojingas bei saugias interneto kaimynystes kurias sudaro svetainių nuorodos
+         \item pateikti tikslingą, iš apačios aukštyn, veikiantį kenkėjiškos programinės įrangos aptikimo metodą
+         \item papildomą būdą atpažinti pirmojo tipo klaidas kenkėjiškos programinės įrangos identifikavimo modulyje
+         \item pateikti naują būda atrasti kenkėjišką programinę įrangą.
+    \end{itemize}
 
+\ktusubsection{Problema}
+Straipsnyje aprašoma žalingos programinės įrangos plitimo problema. Vienas iš būdų kaip į kompiuterius patenka  tokia
+programinė įranga yra kenksmingų vykdomųjų failų parsisiuntimas iš interneto svetainių. Kenkimo programų plitimą siekiama
+apriboti naudojant prevencines priemones. Siekiama identifikuoti svetaines platinančias kenksmingus failus ir neleisti
+naudotojams jas pasiekti, ar juos kitaip perspėti apie potencialiai pavojingą svetainę.
 
-Straipsnyje \kclong{webcop} siūlomas \mq{WebCop} algoritmas skirtas atpažinti žalingus internetinius puslapius ir
-pavojingų tinklapių grupes, kaimynystes. Stengiamasi identifikuoti 
+\ktusubsection{Metodas}
+
+Straipsnyje identifikuotą kenkėjiškos programinės įrangos plitimo problemos sprendimui siūloma WebCop sistema. Tai yra
+sistema, atpažįstanti kenkėjiškas ir joms gretimas svetaines.
+
+WebCop sistemą WebCop modulis bei dvi duomenų bazės. Viena duomenų bazėje saugomi interneto svetainių tarpusavio ryšių
+informacija, tai yra interneto svetainių grafas. Antra duomenų bazė laiko informaciją apie identifikuotas kenkėjiškas
+programas bei jų šaltinius internete. Ši sistema veikia keliais etapais:
+    \begin{enumerate}[label=\arabic*.]
+        \item Nuorodų į platinimo svetaines aptikimas
+        \item Žalingų kaimynysčių aptikimas
+        \item Naujos, potencialiai žalingos, programinės įrangos aptikimas
+    \end{enumerate}
+
+Pirmas žingsnis, platinimo svetainių atpažinimas vykdomas jungiant identifikuotų kenkėjų duomenų bazės duomenis su
+interneto grafo viršūnėmis. Sekančiame žingsnyje išrenkamos svetainės gretimos platinimo svetainėms. Tai yra vienos
+nuorodos atstumu nuo pavojingų svetainių esančios svetainės. Šie interneto puslapiai yra laikomi žalingos programinės
+įrangos katalogais. Naudotojų prieiga prie šių puslapių turi būti apribota, siekiant juos apsaugoti. Svetainės esančios
+dviejų nuorodų atstumu ir talpinančios nežinomas taikomasias programas identifikuojamos kaip potencialiai pavojingos,
+laikoma kad tai nauja, neidentifikuota kenkėjiška programinė įranga.
+
+\ktusubsection{Duomenų rinkinio aprašas}
+
+WebCop sistema naudoja du duomenų rinkinius -- kenksmingos programinės įrangos registrą bei interneto grafą. Interneto
+grafo duomenų rinkinys formuotas naudojant interneto paieškos variklio duomenis. Kenkėjišių programų registras kuriamas
+naudojantis Windows operacinės sistemos naudotojų teikiamais duomenimis.
+
+\ktusubsection{Rezultatai}
+
+\begin{ktutable}{webcop_rezultatas}{WebCop straipsnyje pateikiami matavimų rezultatai}
+    \begin{tabular}{| l | r |}
+     \hline
+        Matavimas & Vertė \\ \hline
+        Aptiktos nežalingų programų platinimo svetainės & 1460 \\ \hline
+        Aptiktos žalingų programų platinimo svetainės & 10853 \\ \hline
+        Aptikti nežalingų programų katalogai & 2850883 \\ \hline
+        Aptikti žalingų programų katalogai & 391893 \\ \hline
+    \end{tabular}
+\end{ktutable}
+
+Lentelėje \vref{tab:webcop_rezultatas} pateikiami straipsnyje atliktų matavimų rezultatai.
+
+\ktusubsection{Metodo analizė}
+
+Šis metodas yra unikalus keliais aspektais -- skenavimas iš viršaus žemyn pakeičiamas skenavimu iš apačios žemyn ir
+naudojamas egzistuojantis kenkėjiškos programinės įrangos registras vietoje bandymo ją identifikuoti skenavimo metu.
