--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -21,6 +21,9 @@
 \usepackage{polyglossia}
 \setdefaultlanguage{lithuanian}
 
+\usepackage{tikz}
+\usetikzlibrary{shapes.geometric, arrows}
+
 \usepackage[spacecolon=false,bibencoding=UTF8,sortlocale=en_US,backend=biber,sorting=none,labelnumber=true,natbib=true,bibstyle=iso-numeric,firstinits=true,citestyle=iso-numeric,language=lithuanian]{biblatex}
 \bibliography{references}
 
@@ -34,6 +37,7 @@
 
 \ktuchapter{Literatūros apžvalga}
 \input{apzvalga/webcop.tex}
+\input{apzvalga/webtrees.tex}
 
 
 \newpage
