--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -18,6 +18,8 @@
 
 \usepackage{ktua4}
 
+\usepackage{unicode-math}
+
 \usepackage{diagbox}
 \usepackage{polyglossia}
 \setdefaultlanguage{lithuanian}
