--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -39,8 +39,12 @@
 \newpage
 
 \ktuchapter{Literatūros apžvalga}
+
 \input{apzvalga/webcop.tex}
+
 \input{apzvalga/webtrees.tex}
+
+\input{apzvalga/evilseed.tex}
 
 
 \newpage
