--- a/docs/references.bib
+++ b/docs/references.bib
@@ -45,6 +45,17 @@ url = {https://developers.google.com/safe-browsing}
         abstract = {The importance of a Web page is an inherently subjective matter, which depends on the readers interests, knowledge and attitudes. But there is still much that can be said objectively about the relative importance of Web pages. This paper describes PageRank, a mathod for rating Web pages objectively and mechanically, effectively measuring the human interest and attention devoted to them. We compare PageRank to an idealized random Web surfer. We show how to efficiently compute PageRank for large numbers of pages. And, we show how to apply PageRank to search and to user navigation.}
 }
 
+@INPROCEEDINGS{evilseed,
+author={L. Invernizzi and P. M. Comparetti},
+booktitle={2012 IEEE Symposium on Security and Privacy},
+title={EvilSeed: A Guided Approach to Finding Malicious Web Pages},
+year={2012},
+pages={428-442},
+keywords={Internet;search engines;security of data;EvilSeed;Internet;URL;crawler-based approaches;drive-by download attacks;fast prefiltering techniques;malicious Web pages;malicious code;search engines queries;social engineering techniques;unwanted software;Crawlers;Feature extraction;Google;Malware;Search engines;Web pages;Drive-By Downloads;Guided Crawl-Web Security;Guided Crawling;Web Security},
+doi={10.1109/SP.2012.33},
+ISSN={1081-6011},
+month={May},}
+
 @inproceedings{webcop,
 author = {Stokes, Jack W. and Andersen, Reid and Seifert, Christian and Chellapilla, Kumar},
 title = {WebCop: Locating Neighborhoods of Malware on the Web},
