starting with c4.5, soft wraps

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -72,6 +72,20 @@ chapter = {},
 isbn = {},
 }
 
+@book{c45,
+  added-at = {2011-05-12T20:53:49.000+0200},
+  address = {San Mateo, CA},
+  author = {Quinlan, Ross},
+  biburl = {https://www.bibsonomy.org/bibtex/257301013e0d9dfdc6fea0a0b7f534a1f/smolav},
+  interhash = {04b1b53fd5576519f193097987ab221d},
+  intrahash = {57301013e0d9dfdc6fea0a0b7f534a1f},
+  keywords = {c45 decision-trees machine-learning projn2011},
+  publisher = {Morgan Kaufmann Publishers},
+  timestamp = {2011-05-12T20:53:49.000+0200},
+  title = {C4.5: Programs for Machine Learning},
+  year = 1993
+}
+
 @Inbook{lexical,
 author="Mamun, Mohammad Saiful Islam
 and Rathore, Mohammad Ahmad
