--- a/docs/apzvalga/webtrees.tex
+++ b/docs/apzvalga/webtrees.tex
@@ -1,25 +1,26 @@
 \ktusection{Straipsnio Malicious Web Sites Detection using C4.5 Decision Tree apžvalga}
 
-Straipsnyje \kclong{trees} siūlomas sprendimų medžio naudojimas kenkėjiškoms svetainėms identifikuoti pagal įvairias jų
-savybes.
+Straipsnyje \kclong{trees} siūlomas sprendimų medžio naudojimas kenkėjiškoms svetainėms identifikuoti pagal įvairias jų savybes.
 
 \ktusubsection{Problema}
 
-Internetinės svetainės naudoja įvairius pajamų generavimo metodus. Dalis jų yra neteisėti ir kenkia svetainių naudotojams.
-Tokių svetainių identifikavimas ir blokavimas leidžia apsaugoti naudotojuos nuo kenkėjiškos programinės įrangos. Įprasti
-metodai naudoja pavojingų svetainių sąrašus, tačiau šie sąrašai yra baigtiniai, naujos svetainės į juos pridedamos ne
-iš karto. Alternatyva blokuojamų sąrašų sudarymui yra mašininio mokymo modelis kuris gali atpažinti pavojingas svetaines
-pagal jų adresą.
+Internetinės svetainės naudoja įvairius pajamų generavimo metodus. Dalis jų yra neteisėti ir kenkia svetainių naudotojams. Tokių svetainių identifikavimas ir blokavimas leidžia apsaugoti naudotojuos nuo kenkėjiškos programinės įrangos. Įprasti metodai naudoja pavojingų svetainių sąrašus, tačiau šie sąrašai yra baigtiniai, naujos svetainės į juos pridedamos ne iš karto. Alternatyva blokuojamų sąrašų sudarymui yra mašininio mokymo modelis kuris gali atpažinti pavojingas svetaines pagal jų adresą.
 
 \ktusubsection{Metodas}
 
 \ktutexfigure{apzvalga/webtrees_process.tex}{Metodo schema}
 
-Metodo pritaikymo schema yra vaizduojama \vref{fig:apzvalga/webtrees_process.tex} diagramoje. Svetainių klasifikavimui
-naudojamas C4.5 sprendimų medis.
+Metodo pritaikymo schema yra vaizduojama \vref{fig:apzvalga/webtrees_process.tex} diagramoje. Svetainių klasifikavimui naudojamas C4.5 sprendimų medis.
 
-<<Čia bus c4.5 aprašas>>
+\ktusubsubsection{Sprendimų medžio formavimas. C4.5 algoritmas}
 
+Sprendimų medis yra vienas iš klasifikavimo modelių \cite{c45}. Klasifikavimas vykdomas sukuriant testus, kurie atitinka medžio viršūnes. Įrašai yra tikrinami pagal viršūnes atitinkančius testus, pagal testo rezultatą einama per medį kol pasiekiama kurią nors klasę atitinkanti medžio viršūnė \cite{trees}. Algoritmas C4.5 yra paremtas ankstesniu, ID3 medžio formavimo algoritmu \ctite{c45}.
+
+Sprendimų medis formuojamas dviem etapais. Pirma suformuojamas medis, vėliau jis yra supaprastinamas siekiant sumažinti jo sudėtingumą ir galimai padidinti jo tikslumą \cite{c45}. Medį sudarantys testai formuojami siekiant padalinti duomenų rinkinį į dvi dalis, pagal
+
+
+
+\ktusubsubsection{C4.5 algoritmo pritaikymas}
 Klasifikavimui naudojamos leksikografinės svetainių adreso sąvybės bei serverio savybės. Naudojamos svetainės serverio sąvybės:
 \begin{enumerate}[label=\arabic*.]
     \item Duomenų centro vieta
@@ -31,13 +32,11 @@ Klasifikavimui naudojamos leksikografinės svetainių adreso sąvybės bei serve
     \item Ryšio su serveriu pralaidumas
 \end{enumerate}
 
-Naudojamos leksikografinės savybės yra formuojamos iš svetainės universalaus adreso (URL). Jis yra dalinamas į segmentus,
-kuriuos skiria įvairūs simboliai bei skyrybos ženklai. Šie segmentai tampa dvireikšmėmis adreso sąvybėmis.
+Naudojamos leksikografinės savybės yra formuojamos iš svetainės universalaus adreso (URL). Jis yra dalinamas į segmentus, kuriuos skiria įvairūs simboliai bei skyrybos ženklai. Šie segmentai tampa dvireikšmėmis adreso sąvybėmis.
 
 \ktusubsection{Duomenų rinkinio aprašas}
 
-Modeliui apmokyti naudotas duomenų rinkinys surinktas iš kelių skirtingų šaltinių. Naudoti 5000 URL iš kurių 1676 yra
-kenkėjiškų svetainių adresai.
+Modeliui apmokyti naudotas duomenų rinkinys surinktas iš kelių skirtingų šaltinių. Naudoti 5000 URL iš kurių 1676 yra kenkėjiškų svetainių adresai.
 
 \ktusubsection{Rezultatai}
 \ktucomment{
@@ -46,8 +45,7 @@ specifiškumas specificity
 tikslumas accuracy
 }
 
-Apmokant modelį naudota kryžminė patikra, 10\% duomenų skiriama testavimo duomenų imčiai. Naudoti matai tikslumui
-įvertinti yra jautrumas, tikslumas, specifiškumas, AUC metrika.
+Apmokant modelį naudota kryžminė patikra, 10\% duomenų skiriama testavimo duomenų imčiai. Naudoti matai tikslumui įvertinti yra jautrumas, tikslumas, specifiškumas, AUC metrika.
 
 \begin{equation}\label{eq:jautrumas}
 jautrumas = {TP \over {TP + FN}} \cdot 100
