--- a/docs/references.bib
+++ b/docs/references.bib
@@ -86,6 +86,34 @@ isbn = {},
   year = 1993
 }
 
+@Article{Wu2008,
+author="Wu, Xindong
+and Kumar, Vipin
+and Ross Quinlan, J.
+and Ghosh, Joydeep
+and Yang, Qiang
+and Motoda, Hiroshi
+and McLachlan, Geoffrey J.
+and Ng, Angus
+and Liu, Bing
+and Yu, Philip S.
+and Zhou, Zhi-Hua
+and Steinbach, Michael
+and Hand, David J.
+and Steinberg, Dan",
+title="Top 10 algorithms in data mining",
+journal="Knowledge and Information Systems",
+year="2008",
+volume="14",
+number="1",
+pages="1--37",
+abstract="This paper presents the top 10 data mining algorithms identified by the IEEE International Conference on Data Mining (ICDM) in December 2006: C4.5, k-Means, SVM, Apriori, EM, PageRank, AdaBoost, kNN, Naive Bayes, and CART. These top 10 algorithms are among the most influential data mining algorithms in the research community. With each algorithm, we provide a description of the algorithm, discuss the impact of the algorithm, and review current and further research on the algorithm. These 10 algorithms cover classification, clustering, statistical learning, association analysis, and link mining, which are all among the most important topics in data mining research and development.",
+issn="0219-3116",
+doi="10.1007/s10115-007-0114-2",
+url="http://dx.doi.org/10.1007/s10115-007-0114-2"
+}
+
+
 @Inbook{lexical,
 author="Mamun, Mohammad Saiful Islam
 and Rathore, Mohammad Ahmad
